Fix dark mode previous button

--- a/static/style.css
+++ b/static/style.css
@@ -143,7 +143,8 @@ form > div a, form > div button {
 form > div a:last-of-type, form > div button:first-of-type + a {
 	background-color: transparent;
 	/* color: black; */
-	color: rgb(211, 210, 255);
+	/* color: rgb(211, 210, 255); */
+	color: black;
 	text-decoration: underline;
 	text-underline-offset: 2px;
 }
@@ -270,6 +271,10 @@ input[type="submit"] {
 		/* text-decoration-color: rgb(158, 158, 255); */
 		/* text-decoration-color: rgb(158, 158, 255); */
 		/* color: rgb(140,140,255) */
+	}
+
+	form > div a:last-of-type, form > div button:first-of-type + a {
+		color: rgb(211, 210, 255);
 	}
 
 	nav > a:visited {
